tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/datetime/second-over.stderr
TOML parse error at line 3, column 22
  |
3 | d = 2006-01-01T00:00:61-00:00
  |                      ^
invalid date-time
value is out of range
